--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="styles/style.css">
+  <script src="https://kit.fontawesome.com/356b1fa413.js" crossorigin="anonymous"></script>
 </head>
 
 
@@ -32,7 +33,7 @@
           Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved
           moments.
         </p>
-        <button class="btn-primary">Download CV</button>
+        <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
         <button class="btn-primary">contact</button>
       </div>
       <img class="banner-profile" src="images/hardy.png" alt="">
@@ -158,7 +159,7 @@
       </div>
       </div>
       <div class="text-center resume-download-cv">
-        <button class="btn-primary">Download CV</button>
+        <button class="btn-primary"> <i class="fa-solid fa-download"></i>Download CV</button>
 
       </div>
     </section>
